feat: add comprehensive unit test suite for backend components